# yaqd-control

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS
.github/workflows/: python-mypy.yml  python-publish.yml  python-test.yml
docs/: CNAME  index.html
tests/: test_get_executable_path_windows.py  test_smoke.py
yaqd_control/: VERSION  __init__.py  __main__.py  __version__.py  _cache.py  _daemon_data.py  _enablement.py  _list.py  _scan.py  _start.py  _status.py
yaqd_tools/: list_daemons.py  start_daemons.py
