[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "yaqd_control"
dist-name = "yaqd-control"
author = "yaq developers"
author-email = "git@ksunden.space"
home-page = "https://yaq.fyi"
requires-python = ">=3.7"
requires = ["appdirs", "toml", "click", "prettytable!=1.0.0", "colorama", "yaqc"]
description-file="README.md"
classifiers=[
        "Development Status :: 2 - Pre-Alpha",
	"Intended Audience :: Science/Research",
	"License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
	"Natural Language :: English",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.7",
	"Programming Language :: Python :: 3.8",
	"Topic :: Scientific/Engineering",
]

[tool.flit.metadata.urls]
Source = "https://gitlab.com/yaq/yaqd-control"
Documentation = "https://control.yaq.fyi"
Issues = "https://gitlab.com/yaq/yaqd-control/issues"

[tool.flit.metadata.requires-extra]
dev = ["black", "pre-commit"]
tests = ["pytest", "pytest-subprocess"]

[tool.flit.scripts]
yaqd = "yaqd_control.__main__:main"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
