[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yaqd-control"
authors = [{name="yaq developers"}]
requires-python = ">=3.7"
dependencies = ["platformdirs", "toml>=0.10.2", "click", "prettytable!=1.0.0", "rich", "yaqc>=2023.6.0"]
license = "LGPL-3.0-only"
dynamic = ["version"]
readme="README.md"
classifiers=[
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
]

[project.urls]
"Home page" = "https://yaq.fyi"
Source = "https://github.com/yaq-project/yaqd-control"
Documentation = "https://control.yaq.fyi"
Issues = "https://github.com/yaq-project/yaqd-control/issues"

[project.optional-dependencies]
dev = ["black", "pre-commit"]
tests = ["pytest", "pytest-subprocess", "types-toml", "types-click"]

[project.scripts]
yaqd = "yaqd_control.__main__:main"

[tool.hatch.version]
path = "yaqd_control/__version__"

[tool.black]
line-length = 99
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''
